--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.1.11
         with:
-          publish-dir: './dist'
+          publish-dir: './build'
           production-branch: master
           github-token: ${{ secrets.GIT_SECRET }}
           deploy-message: 'Deploy from GitHub Actions'
