--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -3,16 +3,20 @@ on:
   push:
   pull_request:
     types: [opened, synchronize]
-    branches: [master, staging]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+        name: 'Checkout source code'
       - uses: actions/checkout@v2
+
+        name: 'Setup Nodejs environment'
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+
+        name: 'Build the site'
       - run: npm ci
       - run: npm run build
 
@@ -21,8 +25,7 @@ jobs:
         with:
           publish-dir: './build'
           production-branch: master
-          github-token: ${{ secrets.GIT_SECRET }}
-          deploy-message: 'Deploy from GitHub Actions'
+          deploy-message: ${{ github.event.head_commit.message }}
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
