--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,14 +8,14 @@ jobs:
   test_pull_request:
     runs-on: ubuntu-latest
     steps:
-        name: Checkout source code
-      - uses: actions/checkout@v2
+      - name: Checkout source code
+        uses: actions/checkout@v2
 
-        name: Setup Nodejs environment
-      - uses: actions/setup-node@v1
+      - name: Setup Nodejs environment
+        uses: actions/setup-node@v1
         with:
           node-version: 12
 
-        name: Run tests
+      - name: Run tests
       - run: npm ci
       - run: npm test
