--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,13 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        name: Checkout source code
-
-      - name: Setup Nodejs environment
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 12
-
-      - name: Run tests
       - run: npm ci
       - run: npm test
