--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -8,12 +8,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout source code
       - uses: actions/checkout@v2
+        
+        name: Setup Nodejs environment
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-
+        
+        name: Install dependencies
       - run: npm ci
+        
+        name: Build site
       - run: npm run build
 
       - name: Deploy to Netlify
