--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,9 +8,16 @@ jobs:
   test_pull_request:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout source code
+        uses: actions/checkout@v2
+
+      - name: Setup Nodejs environment
+        uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
-      - run: npm test
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
