--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,8 +1,9 @@
-name: Build and Deploy to Netlify
+name: Build and Deploy
 on:
   push:
   pull_request:
     types: [opened, synchronize]
+    branches: [master, staging]
 
 jobs:
   build:
@@ -10,15 +11,15 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-        
+
       - name: Setup Nodejs environment
         uses: actions/setup-node@v1
         with:
           node-version: 12
-        
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build site
         run: npm run build
 
